--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -55,7 +55,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.common-dataservice</groupId>
 			<artifactId>cmn-data-svc-client</artifactId>
-			<version>2.2.6</version>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.acumos.acumos-nexus-client</groupId>
@@ -63,9 +63,9 @@ limitations under the License.
 			<version>2.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.acumos.security-verification.license-manager</groupId>
+			<groupId>org.acumos.license-manager</groupId>
 			<artifactId>license-manager-client-library</artifactId>
-			<version>0.0.11</version>
+			<version>0.0.14</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.google.collections</groupId>
@@ -268,6 +268,7 @@ limitations under the License.
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>11</release>
+                                	<forceJavacCompilerUse>true</forceJavacCompilerUse>
 				</configuration>
 			</plugin>
 			<plugin>
