--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -63,9 +63,9 @@ limitations under the License.
 			<version>2.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.acumos.security-verification.license-manager</groupId>
+			<groupId>org.acumos.license-manager</groupId>
 			<artifactId>license-manager-client-library</artifactId>
-			<version>0.0.11</version>
+			<version>0.0.14-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.google.collections</groupId>
