fix for Automatic Rating Add
Change-Id: I77e6578e095fa61738b4b75a41a4c9ab33eba5fb
Issue-ID: ACUMOS-3349
Description:As a user, I want Acumos to automatically add a star rating while I publish my model from private to the Marketplace.
Signed-off-by: Neeraj Bhatnagar (nb7616) <NB00508933@techmahindra.com>

--- a/acumos-portal-be/application.properties
+++ b/acumos-portal-be/application.properties
@@ -28,9 +28,17 @@ management.security.roles=SUPERUSER
 
 # CDmS REST endpoints are protected by HTTP Basic Authentication
 #Common Data Source Configuration
-cdms.client.url=http://localhost:8082/ccds
+#cdms.client.url=http://localhost:8082/ccds
+#cdms.client.username=ccds_client
+#cdms.client.password=ccds_client
+
+cdms.client.url=http://cognita-dev1-vm01-core.eastus.cloudapp.azure.com:8000/ccds
 cdms.client.username=ccds_client
 cdms.client.password=ccds_client
+
+#cdms.client.url=http://cognita-ist2-vm01-core.eastus.cloudapp.azure.com:8000/ccds
+#cdms.client.username=ccds_client
+#cdms.client.password=ccds_client
 
 
 #Email Configuration
@@ -62,11 +70,18 @@ spring.servlet.multipart.max-request-size=1024MB
 
 
 #Nexus Configuration
-nexus.url=http://nexus.group.mycompany.com/repository/repo_acumos_model_maven/
-nexus.username=foo
-nexus.password=bar
-nexus.groupId=com.artifact
+#nexus.url=http://nexus.group.mycompany.com/repository/repo_acumos_model_maven/
+#nexus.username=foo
+#nexus.password=bar
+#nexus.groupId=com.artifact
 #nexus.proxy=http://one.proxy.mycompany.com:8080
+
+nexus.url=http://acumos-devuser:d3vu3er@acumos-nexus01.eastus.cloudapp.azure.com:8081/repository/acumos-dev-maven/
+nexus.username=acumos-devuser
+nexus.password=d3vu3er
+nexus.groupId=org.acumos
+nexus.proxy=""
+
 
 #Validation API Configuration
 portal.submitValidation.api=http://myValidationServer.com:9062/status/v1.0/tasks
@@ -82,7 +97,6 @@ portal.feature.verifyAccount=false
 portal.feature.publishSelfRequestEnabled=true
 portal.feature.sv.enabled=false
 portal.feature.sv.api=http://verification-service:9000/scan
-portal.feature.sv.infoRegex=license scan (not yet started)|(in-progress)
 #Expiration time of verification token in Hours
 portal.feature.verifyToken.exp_time=24
 portal.ui.server.address=http://localhost:8085
@@ -91,9 +105,7 @@ portal.feature.download_bufferSize=8
 portal.feature.catalog.pagesize=1000
 
 portal.feature.cloud_enabled =    [{"cloudEnabled" : "true", "cloudName" : "azure", "cloudDisplayText" : "Microsoft Azure", "imageUrl": "/images/deploy-cloud/microsoft_azure.png" },{ "cloudEnabled" : "true", "cloudName" : "rackspace", "cloudDisplayText" : "Rackspace", "imageUrl": "/images/deploy-cloud/rackspace.png" },{ "cloudEnabled" : "false",  "cloudName" : "gcp", "cloudDisplayText" : "Google Cloud Platform", "imageUrl": "/images/deploy-cloud/google_cloud_platform.png" },{ "cloudEnabled" : "true",  "cloudName" : "deploylocal", "cloudDisplayText" : "Deploy To Local", "imageUrl": "/images/deploy-cloud/deploy_to_local.png" },{ "cloudEnabled" : "true",  "cloudName" : "whitebox", "cloudDisplayText" : "Deploy To White Box", "imageUrl": "/images/deploy-cloud/deploy_to_whitebox.png" }]    
-portal.feature.menu =  [{"name": "ML Learning Path","url":"","imagePath":"/images/sidebar-icons/ML_learning_path_selected.png"}]
-portal.feature.ds.menu = {"workbenchActive":false,"acucomposeActive":true,"blocks":[{"active":true,"title":"Extra Block","description":"Description here","url":"http://localhost:8085/index.html#/home","imagePath":"/images/sidebar-icons/icon_competition_active.png"}]}
-
+portal.feature.menu =  [{"name": "ML LEARNING PATH","url":"","imagePath":"/images/sidebar-icons/ML_learning_path_selected.png"}]
 #QAndA Url 
 qanda.url=https://stackoverflow.com/search?q=acumos
 
@@ -104,9 +116,6 @@ doc.url=http://docs.acumos.org/
 #Jupyterhub URL
 jupyter.url=https://cognita-dev1-vm01-core.eastus.cloudapp.azure.com:8086/
 
-#ELK APIs
-elk.url=http://localhost:9600/elkclient/
-
 #Dashboard Url
 portal.dashboard.url=http://www.mycompany.com/
 
@@ -114,7 +123,7 @@ portal.dashboard.url=http://www.mycompany.com/
 model.storage.folder.name=/acumosWebOnboarding
 
 #Web Onboarding Push Model url
-onboarding.push.model.url=http://localhost:8090/onboarding-app/v2/models
+onboarding.push.model.url=http://cognita-dev1-vm01-core.eastus.cloudapp.azure.com:8090/onboarding-app/v2/models
 #onboarding.push.model.url=http://localhost:8090/onboarding-app/v2/auth
 onboarding.push.model.dcae_url=http://localhost:8090/onboarding-app/v2/dcae_models
 onboarding.push.advancedmodel.url=http://localhost:8090/onboarding-app/v2/advancedModel
