Remove docker manifest file when deleting a model
ISSUE-ID: ACUMOS-2567
Signed-off-by: vasudevaraok <vasudevar@techmahindra.com>
Change-Id: I9f6e2f7baac5127fc3baf4fcd78b7bc147432877

--- a/acumos-portal-be/application.properties
+++ b/acumos-portal-be/application.properties
@@ -66,6 +66,7 @@ nexus.url=http://nexus.group.mycompany.com/repository/repo_acumos_model_maven/
 nexus.username=foo
 nexus.password=bar
 nexus.groupId=com.artifact
+nexus.docker=http://acumos-devuser:d3vu3er@acumos-nexus01.eastus.cloudapp.azure.com:8081/repository/acumos-dev-docker
 #nexus.proxy=http://one.proxy.mycompany.com:8080
 
 #Validation API Configuration
