licensing profile related changes
Change-Id: I7a5c6d1b42becbe113a1cc6459c37324035856bd
ISSUE-ID: ACUMOS-3030, ACUMOS-3022, ACUMOS-3446
Signed-off-by: Tausif Khanooni (tk0051225) <tk0051225@techmahindra.com>

--- a/acumos-portal-be/application.properties
+++ b/acumos-portal-be/application.properties
@@ -114,6 +114,9 @@ portal.dashboard.url=http://www.mycompany.com/
 #model upload storage folder name under base path
 model.storage.folder.name=/acumosWebOnboarding
 
+#license profile url
+license_profile.url=http://cognita-dev1-vm01-core.eastus.cloudapp.azure.com:8087/license-profile-editor/
+
 #Web Onboarding Push Model url
 onboarding.push.model.url=http://localhost:8090/onboarding-app/v2/models
 #onboarding.push.model.url=http://localhost:8090/onboarding-app/v2/auth
