License Profile and LicenseProfile Validation
Change-Id: I698e0cd5e1ef4eb7a99ab0411088ece11b604263
ISSUE-ID: ACUMOS-3030, ACUMOS-3338
Signed-off-by: Tausif Khanooni (tk0051225) <tk0051225@techmahindra.com>

--- a/acumos-portal-be/application.properties
+++ b/acumos-portal-be/application.properties
@@ -115,7 +115,7 @@ portal.dashboard.url=http://www.mycompany.com/
 model.storage.folder.name=/acumosWebOnboarding
 
 #license profile url
-license_profile.url=http://cognita-dev1-vm01-core.eastus.cloudapp.azure.com:8087/license-profile-editor/
+license_profile.url=http://localhost:8087/license-profile-editor/
 
 #Web Onboarding Push Model url
 onboarding.push.model.url=http://localhost:8090/onboarding-app/v2/models
