--- a/acumos-portal-be/application.properties
+++ b/acumos-portal-be/application.properties
@@ -44,6 +44,9 @@ spring.mail.transport.protocol=smtp
 spring.mail.template.folder.path=/fmtemplates/
 
 
+#To set LoginExipreation days use like'10H' for 10 hours, '1D' for 1 day, '1W' for 1 week, '1M' for 1 month
+portal.feature.loginExpire.duration=2M
+
 #MailJet Credentials
 #portal.mailjet.api.key=
 #portal.mailjet.secret.key=
