register call when a solution is published
Issue-ID : ACUMOS-3340
Description : Portal - Use LicenseAsset.registerAsset when a solution is published

Change-Id: I34a3511b3aa332ada893c663aaeb3996a16d9fe9
Signed-off-by: neerajb <NB00508933@techmahindra.com>

--- a/acumos-portal-be/application.properties
+++ b/acumos-portal-be/application.properties
@@ -167,3 +167,6 @@ client.ssl.key-store-type = PKCS1
 client.ssl.key-password = password
 client.ssl.trust-store = portalTrustStore.jks
 client.ssl.trust-store-password = password
+##lumser url for registering a licence 
+lum.url=http://localhost:1234
+
