Portal updates for SV and Licensing
- register asset with LMCL/LUM when publishing solution
- update to SV 1.1.0 (which is using LMCL 1.0.0) - forces fixes to older portal code which created old RTUs in boreas.
- Ensure lumserver param is added to SV call

Change-Id: Ic86eee4faaef4dffd5ed6d74aa3961af8bad993c
ISSUE-ID: ACUMOS-3340
Signed-off-by: Neeraj Bhatnagar (nb7616) <NB00508933@techmahindra.com>
Signed-off-by: justin14 <justin.early@est.tech>

--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -65,7 +65,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.license-manager</groupId>
 			<artifactId>license-manager-client-library</artifactId>
-			<version>0.0.14</version>
+			<version>1.0.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.google.collections</groupId>
@@ -133,7 +133,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.security-verification</groupId>
 			<artifactId>security-verification-client</artifactId>
-			<version>0.0.24</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.inject</groupId>
