--- a/acumos-portal-be/application.properties
+++ b/acumos-portal-be/application.properties
@@ -169,5 +169,7 @@ client.ssl.key-store-type = PKCS1
 client.ssl.key-password = password
 client.ssl.trust-store = portalTrustStore.jks
 client.ssl.trust-store-password = password
-##lumser url for registering a licence 
-lum.url=http://localhost:1234
+##lumser url for registering a licence
+
+#To set LoginExipreation days use like'10H' for 10 hours, '1D' for 1 day, '1W' for 1 week, '1M' for 1 month
+portal.feature.loginExpire.duration=2M
