Portal - Moving RTU check into portal
- Move RTU check directly into portal (currently inside security verification)
- Remove exclude=SecurityContext and correctly setup SecurityContext for sync and
  async calls
- Remove duplicate heading License Details in portal-fe
- Using common object VerifySolutionActionResponse between SV and RTU check
- Check with SV and LUM in parallel
- Fixed unit tests to work with mock user works with securitycontext
- Also made sure that @Async calls work with CompletableFuture and they
  have access to inheritable SecurityContext
- Fixed up unit tests that were calling apis that required authentication
- Bump LMCL to 1.2.0
- Bumpd SV to 1.2.0
- Added support for @EnableAsync and CompletableFuture
   - removed AsyncCustomizeExcutor - replaced it with AsyncConfiguration which
     is configurable

Issue-Id: ACUMOS-3505

Change-Id: Ibeb8200ea4eda7466e2d6f442aff3fec880cbf5a
Signed-off-by: justin14 <justin.early@est.tech>

--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -24,7 +24,7 @@ limitations under the License.
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acumos.portal-marketplace</groupId>
 	<artifactId>acumos-portal-be</artifactId>
-	<version>3.0.15-SNAPSHOT</version>
+	<version>3.0.17-SNAPSHOT</version>
 	<name>Acumos Portal backend server</name>
 	<description>Acumos Portal Backend APIs</description>
 	<parent>
@@ -65,7 +65,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.license-manager</groupId>
 			<artifactId>license-manager-client-library</artifactId>
-			<version>1.0.0</version>
+			<version>1.2.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.google.collections</groupId>
@@ -133,7 +133,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.security-verification</groupId>
 			<artifactId>security-verification-client</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.inject</groupId>
@@ -149,6 +149,11 @@ limitations under the License.
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<!-- Spring sets the <version>4.11</version> -->
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -266,9 +271,10 @@ limitations under the License.
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
 				<configuration>
 					<release>11</release>
-                                	<forceJavacCompilerUse>true</forceJavacCompilerUse>
+					<forceJavacCompilerUse>true</forceJavacCompilerUse>
 				</configuration>
 			</plugin>
 			<plugin>
