--- a/acumos-portal-be/application.properties
+++ b/acumos-portal-be/application.properties
@@ -176,4 +176,4 @@ client.ssl.trust-store-password = password
 ##lumser url for registering a licence 
 lum.url=http://localhost:1234
 #To set LoginExipreation days use like'10H' for 10 hours, '1D' for 1 day, '1W' for 1 week, '1M' for 1 month
-portal.feature.loginExpire.duration=1M
+portal.feature.loginExpire.duration=2H
