--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -223,6 +223,16 @@ limitations under the License.
 			<artifactId>spring-mock</artifactId>
 			<version>2.0.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.acumos.federation</groupId>
+			<artifactId>acumos-fgw-client</artifactId>
+			<version>3.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.acumos.federation</groupId>
+			<artifactId>acumos-fgw-client-config</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
