pm 3.0.19 - Fix Pre-publish denials
- Bump LMCL to 1.4.1
- Seperated out RtuCheck into seperate service
- Organized imports,
- fixed copyright

Issue-Id: ACUMOS-3651

Change-Id: I33a8ab52a673e87fc770196c5b676d83de914d8c
Signed-off-by: justin14 <justin.early@est.tech>

--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -65,7 +65,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.license-manager</groupId>
 			<artifactId>license-manager-client-library</artifactId>
-			<version>1.4.0</version>
+			<version>1.4.1-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.google.collections</groupId>
