--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -233,6 +233,11 @@ limitations under the License.
 			<artifactId>acumos-fgw-client-config</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
