--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -222,6 +222,7 @@ limitations under the License.
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-mock</artifactId>
 			<version>2.0.8</version>
+                        <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.acumos.federation</groupId>
@@ -232,6 +233,11 @@ limitations under the License.
 			<groupId>org.acumos.federation</groupId>
 			<artifactId>acumos-fgw-client-config</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2</version>
 		</dependency>
 	</dependencies>
 	<build>
