--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -227,12 +227,12 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.federation</groupId>
 			<artifactId>acumos-fgw-client</artifactId>
-			<version>3.0.1-SNAPSHOT</version>
+			<version>3.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.acumos.federation</groupId>
 			<artifactId>acumos-fgw-client-config</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
