--- a/acumos-portal-fe/pom.xml
+++ b/acumos-portal-fe/pom.xml
@@ -188,7 +188,8 @@ limitations under the License.
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<release>11</release>
+					<source>1.8</source>
+                    <target>1.8</target>      
 				</configuration>
 			</plugin>
 			<!-- Skip the deployment step, this makes jenkins config easy -->
