--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -24,7 +24,7 @@ limitations under the License.
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acumos.portal-marketplace</groupId>
 	<artifactId>acumos-portal-be</artifactId>
-	<version>3.1.0-SNAPSHOT</version>
+	<version>3.0.20-SNAPSHOT</version>
 	<name>Acumos Portal backend server</name>
 	<description>Acumos Portal Backend APIs</description>
 	<parent>
@@ -57,11 +57,46 @@ limitations under the License.
 			<artifactId>cmn-data-svc-client</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		
+		<dependency>
+              <groupId>javax.xml.bind</groupId>
+              <artifactId>jaxb-api</artifactId>
+              <version>2.1</version>
+              </dependency>
+              <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>0.1.19</version>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.acumos.acumos-nexus-client</groupId>
 			<artifactId>acumos-nexus-client</artifactId>
-			<version>2.2.1</version>
+			<version>2.2.1-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+             <groupId>org.acumos.federation</groupId>
+             <artifactId>acumos-fgw-client</artifactId>
+             <version>3.0.1</version>
+        </dependency>
+        <dependency>
+               <groupId>org.acumos.federation</groupId>
+               <artifactId>acumos-fgw-client-config</artifactId>
+               <version>1.0.0</version>
+        </dependency>
+        <dependency>
+	       <groupId>com.networknt</groupId>
+	       <artifactId>json-schema-validator</artifactId>
+	       <version>1.0.4</version>
+	  	</dependency>
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.acumos.license-manager</groupId>
 			<artifactId>license-manager-client-library</artifactId>
@@ -125,6 +160,13 @@ limitations under the License.
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+		
+		<dependency> 
+              <groupId>org.apache.maven.wagon</groupId> 
+              <artifactId>wagon-provider-api</artifactId> 
+              <version>2.12</version> 
+        </dependency>
+        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -133,7 +175,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.security-verification</groupId>
 			<artifactId>security-verification-client</artifactId>
-			<version>1.2.1</version>
+			<version>0.0.22</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.inject</groupId>
