Adding platform-oam:logging maven dependency
Change-Id: Idf3e914829805f162e686cd226e04aee7d881360
Signed-off-by: Dnyaneshwar Ashok Gaikwad <dg00621027@TechMahindra.com>

--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -239,6 +239,11 @@ limitations under the License.
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.acumos.platform-oam</groupId>
+			<artifactId>logging-demo</artifactId>
+			<version>3.0.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
