portal version bump 3.0.28, release notes, acumos/
Change-Id: I7bbedefbdc6ed68a73acbd782e57484d173cba24
Signed-off-by: Amol Sarode <AS0055952@TechMahindra.com>

--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -24,7 +24,7 @@ limitations under the License.
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acumos.portal-marketplace</groupId>
 	<artifactId>acumos-portal-be</artifactId>
-	<version>3.0.27-SNAPSHOT</version>
+	<version>3.0.28-SNAPSHOT</version>
 	<name>Acumos Portal backend server</name>
 	<description>Acumos Portal Backend APIs</description>
 	<parent>
@@ -461,7 +461,7 @@ limitations under the License.
 					<pushRegistry>${docker.push.registry}</pushRegistry>
 					<images>
 						<image>
-							<name>acumos-portal-be:${project.version}</name>
+							<name>acumos/acumos-portal-be:${project.version}</name>
 							<build>
 								<from>adoptopenjdk/openjdk11-openj9:alpine-jre</from>
 								<tags>
