--- a/acumos-portal-fe/pom.xml
+++ b/acumos-portal-fe/pom.xml
@@ -23,7 +23,7 @@ limitations under the License.
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acumos.portal-marketplace</groupId>
 	<artifactId>acumos-portal-fe</artifactId>
-	<version>3.1.0-SNAPSHOT</version>
+	<version>4.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Acumos Portal frontend server</name>
 	<description>Acumos Portal AngularJS Front End</description>
@@ -292,7 +292,7 @@ limitations under the License.
 					<images>
 						<image>
 							<!-- Specify a tag to avoid default tag "latest" -->
-							<name>acumos-portal-fe:${project.version}</name>
+							<name>acumos/acumos-portal-fe:${project.version}</name>
 							<build>
 								<!-- This is the same FROM used in a Dockerfile -->
 								<from>adoptopenjdk/openjdk11-openj9:alpine-jre</from>
