Publish Req changes
Change-Id: I4d68aa1eb8dff0d81fc1648e67af774495ad9a0b
Signed-off-by: NeerajSonar <ns00499861@techmahindra.com>

--- a/acumos-portal-be/pom.xml
+++ b/acumos-portal-be/pom.xml
@@ -55,7 +55,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.common-dataservice</groupId>
 			<artifactId>cmn-data-svc-client</artifactId>
-			<version>3.1.1</version>
+			<version>3.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.acumos.acumos-nexus-client</groupId>
@@ -133,7 +133,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.acumos.security-verification</groupId>
 			<artifactId>security-verification-client</artifactId>
-			<version>1.2.1</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.inject</groupId>
